--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .bg {
   /* bg */
@@ -30,7 +30,7 @@
   height: 18.7%;
   text-align: center;
 
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -59,7 +59,7 @@
   position: absolute;
   padding-left: 33%;
 
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 21px;
@@ -114,7 +114,7 @@
   left: 77px;
   top: 372px;
 
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -173,7 +173,7 @@ ul.nav li {
   list-style: none;
   text-align: center;
   cursor: pointer;
-  transition: all 0.7s;
+  transition: all 0.1s;
   border-bottom-left-radius: 2rem;
   border-top-left-radius: 2rem;
 }
