--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,6 +138,8 @@
   /* margin: 3.5rem auto 1.5rem; */
   padding: 2rem 1rem;
   color: #a59fa1;
+  text-align: center;
+
   /* border-radius: 2rem; */
   /* @media (max-width: 769px) {
     padding: 2rem 0;
@@ -183,7 +185,7 @@ ul.nav li:nth-child(2) {
   border-top-right-radius: 2rem;
 }
 ul.nav li:hover {
-  background: rgba(50, 224, 196, 0.15);
+  background: #4f61aa;
 }
 ul.nav li.active {
   background: #39a2db;
