Change color of cards on hover

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -253,6 +253,11 @@ body {
     justify-content: space-between;
 }
 
+.container :hover {
+    transition: 0.05s;
+    background-color: #BCC8F7;
+}
+
 .groupcard {
     position: relative;
     width: 20%;
