--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
 
 .highlight {
   color: #364373;
@@ -11,7 +11,7 @@
 }
 
 h1 {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 22px;
@@ -36,7 +36,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
@@ -60,7 +60,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -76,7 +76,7 @@ h3 {
 }
 
 body {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -130,7 +130,7 @@ body {
   height: 18.7%;
   text-align: center;
 
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -161,7 +161,7 @@ body {
   position: absolute;
   padding-left: 33%;
 
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 21px;
@@ -416,7 +416,7 @@ ul.nav {
   display: flex;
   align-items: center;
   /* justify-content: space-between; */
-  border: 1px solid #39a2db;
+  border: 1px solid #a59fa1;
   border-radius: 2rem;
   /* @media (max-width: 768px) {
     width: 90%;
@@ -448,10 +448,10 @@ ul.nav li:nth-child(2) {
   border-top-right-radius: 2rem;
 }
 ul.nav li:hover {
-  background: #4f61aa;
+  background: #d9d9d9;
 }
 ul.nav li.active {
-  background: #39a2db;
+  background: #d9d9d9;
 }
 
 /* First and Second Tab Styles */
